--- a/css/index.css
+++ b/css/index.css
@@ -31,14 +31,14 @@
     color: white;
     font-size: 15px;
 }
-button{
-    height: 35px;
+.register{
+    height: 30px;
     color: #FF6F28;
     border: none;
     text-decoration: none;
     text-align: center;
     border-radius: 8px;
-    
+    font-size: 15px;
 }
 .menu>a{
     text-decoration: none;
@@ -51,5 +51,23 @@ button{
 }
 .srch-login-register>img{
     width: 10%;
+}
+#login:hover{
+    color: #FF6F28;
+    /* font-weight: bold; */
+    transition: 0.4s linear;
+}
+
+.register:hover{
+    background-color: transparent;
+    color: white;
+    border: 2px solid #FF6F28;
+    transition: 0.4s linear;
+}
+.menu>a:hover{
+    color: #FF6F28;
+    transition: 0.4s linear;
+    /* text-decoration: underline solid #FF6F28; */
+    border-bottom: 2px solid #FF6F28;
 }
 
