--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,10 @@
     margin: 0px;
     padding: 0px;
 }
+@font-face {
+    font-family: Poppins-Bold;
+    src: url(./../fonts/Poppins-Bold.ttf);
+}
 .container{
     height: 100vh;
     background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0)), url('./../images/backgroundimage.png');
@@ -9,7 +13,7 @@
     background-position: center;
     background-size: cover;
     font-family: sans-serif;
-    
+    position: relative;
 }
 .nav-bar{
     display: flex;
@@ -54,7 +58,6 @@
 }
 #login:hover{
     color: #FF6F28;
-    /* font-weight: bold; */
     transition: 0.4s linear;
 }
 
@@ -66,8 +69,44 @@
 }
 .menu>a:hover{
     color: #FF6F28;
-    transition: 0.4s linear;
-    /* text-decoration: underline solid #FF6F28; */
+    transition: 0.4s linear;   
     border-bottom: 2px solid #FF6F28;
 }
+.header-txt{
+    width: 40%;
+    height: 50%;
+    position: absolute;
+    top: 25%;
+    left: 30%;
+    text-align: center;
+    color: white;
+    justify-items: center;
+}
+.header-txt>h1{
+    font-family: Poppins-Bold;
+    font-weight: bold;      
+    font-size: 45px;
+}
+.header-txt>p{
+    width: 85%;
+}
+.header-txt>h1,p{
+    padding-bottom: 20px;
+}
+.get-started{
+    padding: 15px 25px;
+    background-color: #FF6F28;
+    color: #ffffff;
+    border: none;
+    text-decoration: none;
+    text-align: center;
+    border-radius: 8px;
+    font-size: 15px;
+}
 
+.get-started:hover{
+    background-color: transparent;
+    color: white;
+    border: 2px solid #FF6F28;
+    transition: 0.4s linear;
+}
