--- a/css/index.css
+++ b/css/index.css
@@ -110,3 +110,35 @@
     border: 2px solid #FF6F28;
     transition: 0.4s linear;
 }
+.footer{
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    min-height: 60px;
+    width:60%;
+    border-radius: 5px;
+    position: relative;
+    top: 455px;
+    left: 20%;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    padding: 10px 30px;
+}
+.live-chat,.examination,.compitition{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content:space-around;
+    align-items: center;
+    /* background-color: black; */
+    width: 20%;
+}
+img{
+    width: 45px;
+}
+.container-2{
+    background-color: #ffffff;
+    height: 100vh;
+}
