--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 *{
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
 }
 @font-face {
     font-family: Poppins-Bold;
@@ -74,7 +75,7 @@
 }
 .header-txt{
     width: 40%;
-    height: 50%;
+    min-height: 50%;
     position: absolute;
     top: 25%;
     left: 30%;
@@ -117,11 +118,11 @@
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
-    min-height: 60px;
+    min-height: 80px;
     width:60%;
     border-radius: 5px;
-    position: relative;
-    top: 455px;
+    position:relative;
+    top: -40px;
     left: 20%;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     padding: 10px 30px;
@@ -139,6 +140,36 @@ img{
     width: 45px;
 }
 .container-2{
-    background-color: #ffffff;
+    /* background-color: #5a2323; */
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 40px;
+
+}
+.container-2>h1{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    /* background-color: gray;  */
+    margin-bottom: 30px;
+}
+.container-2>a{
+    text-decoration: none;
+    color: #FF6F28;
+    text-align: right;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.top-catogaries{
+    /* background-color: antiquewhite; */
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    /* min-height: 10%; */
+    justify-content: space-between;
+}
+.top-catogaries>img{
+    width: 20%;
+    max-height: 100%;
 }
